<resources>
    <string name="app_name">Roomies</string>
    <string name="gender_prompt">Select Gender</string>
    <string name="pronouns_prompt">Select Pronouns</string>
    <string name="occupation_prompt">Select Occupation</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_profile_message">Looks like you don\'t have a profile created yet. let\'s do that now!</string>
    <string name="create_habitation">Create Habitation</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="choose_room_type" />
    <string name="choose_room_size" />
    <string name="choose_lease_duration" />
    <string name="create_room" />
    <string name="error_description_empty" />
    <string name="error_price_empty" />
    <string name="max_images_limit">Maximum images limit reached &gt; %1$d</string>
    <string name="select_images_count">Select Images (%1$d/%2$d)</string>
    <string name="create_profile">Create Profile</string>
    <string name="invalid_habitation_id">Invalid habitation ID</string>
    <string name="select_habitation" />


</resources>