<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.authentication.registration.registrationsteps.RegistrationUserProfileInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Last Name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutBirthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Birthdate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextBirthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
               </com.google.android.material.textfield.TextInputLayout>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinnerGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:prompt="@string/gender_prompt"/>

            <com.jaredrummler.materialspinner.MaterialSpinner

                android:id="@+id/spinnerPronouns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:prompt="@string/pronouns_prompt"/>

            <com.jaredrummler.materialspinner.MaterialSpinner

                android:id="@+id/spinnerOccupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:prompt="@string/occupation_prompt"/>

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Back"/>

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Next"
                android:enabled="false"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
